syntax = "proto3";

package daemon.v1;
option go_package = "pkg/pb;pb";

service DaemonService {
    rpc Start(StartRequest) returns (Response);
    rpc Stop(StopRequest) returns (Response);
    rpc Reload(ReloadRequest) returns (Response);
}

message StartRequest {
    string config_path = 1;
}

message StopRequest {}

message ReloadRequest {
    string config_path = 1;
}

message Response {
    bool success = 1;
    string message = 2;
}